--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,40 @@ p {
 input{
   box-sizing: border-box;  /* Fazer com que o input nao ultrapasse a area do elemento pai */
 }
+
+button { /* Padronizando todos os buttons */
+  background-color: #333974;
+  color: #fff;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  opacity: .8;
+
+}
+
+button:hover{/* o button padrao fica "apagado", o hover faz efeito de destaque no button */
+  opacity: 1;
+}
+
+.complete{
+  background-color: #5cb85c;
+}
+
+.remove{
+  background-color: #d9534f;
+}
+
+.todo-form{
+  padding-bottom: 1.5rem;/* espaçamento interno do form */
+}
+
+input,select{
+  padding: 5px;
+  margin-bottom: 10px;
+  border: 1px solid #ddd;
+  border-radius: 3px;/* Sempre manter as medidas padroes do projeto */
+  width: 100%;
+}
+
+
