--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,7 @@ button { /* Padronizando todos os buttons */
   background-color: #333974;
   color: #fff;
   padding: 5px 10px;
+  margin-right: 10px;
   border: none;
   border-radius: 3px;
   cursor: pointer;
@@ -47,6 +48,23 @@ button { /* Padronizando todos os buttons */
 
 button:hover{/* o button padrao fica "apagado", o hover faz efeito de destaque no button */
   opacity: 1;
+}
+
+.todo-list{
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #555;
+}
+
+.todo{
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;/* para jogar os button para o lado direito do container*/
+  align-items: center;/* para colocar o texto do lado esquerdo*/
 }
 
 .complete{
